--- a/C_5026201067_B.html
+++ b/C_5026201067_B.html
@@ -104,7 +104,7 @@
                 <div class="form-group row">
                     <label class="col-sm-3" for="jenisbarang">Jenis Barang:</label>
                     <div class="col-sm-9"> <select name="jenisbarang" id="jenisbarang" required>
-                        <option selected="" value="Default">(Mohon Pilih Jenis Barang)</option>
+                        <option selected="" value="Default">(Pilih Jenis Barang)</option>
                         <option value="FD">Makanan</option>
                         <option value="DR">Minuman</option>
                         <option value="NO">Non Makanan Minuman</option>
